# pcs-mcp

./: .gitignore  README.md  pyproject.toml
src/pcs_mcp/: server.py
