[project]
name = "pcs-mcp"
version = "0.1.0"
description = "MCP server exposing ProCyclingStats teams, riders, and races data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "procyclingstats>=0.1.1",
    "Brotli>=1.1.0",
]

[project.scripts]
pcs-mcp = "pcs_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pcs_mcp"]
